--- a/portfolio.html
+++ b/portfolio.html
@@ -512,7 +512,7 @@ a.em {
 <h4>[2-people Team project]</h4>
 <ul>
 <li><i class="fas fa-box-open"></i> <a href="https://moviestock.herokuapp.com/movies/" class="em" target="_blank">MovieStock Website</a>: it takes a while to load as using free hosting by Heroku.</li>
-<li><i class="fas fa-desktop"></i> <a href="" class="em" target="_blank">Sourcecode</a></li>
+<li><i class="fas fa-desktop"></i> <a href="">Sourcecode</a>: <a href="https://git.heroku.com/moviestock.git" class="uri">https://git.heroku.com/moviestock.git</a></li>
 </ul>
 <center>
 <video width="480" height="320" controls>
