--- a/index.html
+++ b/index.html
@@ -292,32 +292,35 @@ $(document).ready(function () {
 <p>Thank you for visiting my portfolio webpage :)</p>
 <hr />
 </center>
-<ul>
-<li>Education</li>
-</ul>
+<div id="education" class="section level2">
+<h2><b>Education</b></h2>
 <p>I’m a master student in UCSB, studying Geography and Applied Statistics.</p>
 <p>I finished master in Geography with an emphasis on spatial optimization in 2021.</p>
 <p>I’ll finish another master in Applied Statistics on June, 2022.</p>
-<ul>
-<li>Projects</li>
-</ul>
+<hr />
+</div>
+<div id="projects" class="section level2">
+<h2><b>Projects</b></h2>
 <p>I am proficient in Python, and R.</p>
-<p>I’ve done 3D spatial modeling,</p>
+<p>I’ve done 3D spatial modeling, spatial optimization, geo-statistical analysis.</p>
 <p>In the <a href="https://jiwonbaik96.github.io/portfolio.html">Portfolio</a> page, you could read details and source codes of my projects.</p>
-<ul>
-<li>Teaching</li>
-</ul>
+<hr />
+</div>
+<div id="teaching" class="section level2">
+<h2><b>Teaching </b></h2>
 <p>My undergrad major was Geography and Education.</p>
 <p>I taught GIS (Geographic Information Science) using ArcGIS Pro and R.</p>
 <p>I’m the best evaluated TA in the Geography department, and having national teacher’s license in Korea.</p>
 <p>In the <a href="https://jiwonbaik96.github.io/teaching.html">GIS Teaching</a> page, you could read details and source codes of the labs I taught.</p>
-<ul>
-<li>Hobbies</li>
-</ul>
+<hr />
+</div>
+<div id="hobbies" class="section level2">
+<h2><b>Hobbies</b></h2>
 <p>I enjoy surfing, poker and baking.</p>
 <p>if you want to know personal me, you can visit my instagram.</p>
-<p>instagram: <span class="citation">[@miracle_jay0____0]</span>(<a href="https://www.instagram.com/miracle_jay0____0" class="uri">https://www.instagram.com/miracle_jay0____0</a>)</p>
+<p>instagram: @ <a href="https://www.instagram.com/miracle_jay0____0">miracle_jay0____0</a></p>
 <hr />
+</div>
 </div>
 
 
